fix call item contact name overflow ellipsis

--- a/src/components/ActiveCallItem/styles.scss
+++ b/src/components/ActiveCallItem/styles.scss
@@ -64,6 +64,8 @@
   top: 5px;
   left: 45px;
   line-height: 25px;
+  width: calc(100% - 44px);
+  text-align: left;
 
   button {
     font-size: 13px;
