--- a/src/components/CallItem/styles.scss
+++ b/src/components/CallItem/styles.scss
@@ -73,8 +73,9 @@
   position: absolute;
   top: 0px;
   left: 45px;
-	width: auto !important;
   line-height: 38px;
+  width: calc(100% - 44px) !important;
+  text-align: left;
 }
 
 .missed {
